# port-simulator

./: CMakeLists.txt  Makefile  README.md  consts.h  main.c
adt/fifo/: fifo.c  fifo.h
adt/stack/: stack.c  stack.h
include/: container.h  ship.h  stack.h  utils.h
items/container/: container.c  container.h
items/crossbeam/: crossbeam.c  crossbeam.h
items/docks/: docks.c  docks.h
items/include/: crossbeam.h  fifo.h  ship.h  stack.h  utils.h
items/pier/: pier.c  pier.h
items/ship/: ship.c  ship.h
items/src/: crossbeam.c  fifo.c  ship.c  stack.c  utils.c
services/: docking_area.c  docking_area.h
services/crossbeam.service/: crossbeam.service.c  crossbeam.service.h
services/docking_area.service/: docking_area.c  docking_area.h  docking_area.service.c  docking_area.service.h
services/transport/: transport.service.c  transport.service.h
src/: container.c  ship.c  stack.c  utils.c
utils/: utils.c  utils.h
views/: docking_area.view.c  docking_area.view.h
views/docking_area.view/: docking_area.view.c  docking_area.view.h
views/menu.view/: menu.view.c  menu.view.h
